Lisans formu güncellendi

--- a/IhalematikLicance/License.resx
+++ b/IhalematikLicance/License.resx
@@ -118,9 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="labelControl5.Text" xml:space="preserve">
-    <value>Açılan pencerede lisans numaranızı yazmanız gerekmektedir daha sonra "Vereceğiniz Şifre" bölümündeki harf ve rakamları
-LifeTreeSoftware’e bildirmeniz durumunda LifeTreeSoftware ’den size verilecek harf ve rakamları "Karşılık Şifre" bölümüne
-yazınız ve Lisansla butonuna basınız karşınıza "Lisans İşleminiz Başarıyla Tamamlanmıştır" mesajı gelecek ve lisans işleminiz tamamlanmış olacaktır. 
+    <value>Açılan pencerede lisans numaranızı yazmanız gerekmektedir daha sonra "Kontrol Et ve Lisansla" Buttonuna tıklayınız
+"Lisans İşleminiz Başarıyla Tamamlanmıştır" mesajı gelecek ve lisans işleminiz tamamlanmış olacaktır. 
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
