Bf history formu eklendi

--- a/IhalematikPro/Forms/Genel/frm_Anaform.resx
+++ b/IhalematikPro/Forms/Genel/frm_Anaform.resx
@@ -2795,6 +2795,51 @@
         nMGeX5h8s32A+x81vuvcCqURhQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="barButtonItem43.Glyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAedEVYdFRpdGxlAERhdGFiYXI7VmlldztGb3JtYXR0
+        aW5nO+m8qMEAAAHxSURBVDhPbdJrUxJRGAfw8zW7TGUzmV0AURIvBZlEYiJGUNObzOpFMxY1U6NimgyJ
+        YxPU58gy5LLshYV/z/MsLG714rfn7M5zm7NHpVfLhczL73j4gn1zpZ/3VfBgtYLlZ6yM1EoZS0+/isST
+        UlHFH++jCzjo4dl7dHuAjuhiNv0ZKpYtycfJyiOPcCWLcDkLzWgTW9amPtChKtHlItRcZk8KcDCbKGc8
+        NE5oWWi02oRXU1abCkRSBSgeg8fpV9Z0S8g7BTrJFupMMx1UxLY7mEnuQkVSRUzf/4SpBULr5MLOQILe
+        xTbCYscxv40JwjnqVrIg49S1E52km4Uaa5o4Zg0T1YYheG+1O1JITS/uom13Mfol5REQSwgcOPyEk3+z
+        ugnTsnEj/hEqRA/D6rhB/oOky+daFL+ODaLjkPA5BW5vDAoc1bjywBGr6b0kAz8FJVf/U2D8LoltibFY
+        /l9zeQQ9NhG8k3cKcIBu2k4nmoJHZNzN7cqo84+ew2pLDtwXXYcKzm7KLbuyn8AIK817XHbdcw2TetPC
+        tZsfoALRDbk0fwf1A4f3+uLiUg//2qszVOB6ZJ3Gact/P8m5Aw65B567YMpBj0y9hxoK5fIXQ+8wFHqL
+        C+T8eM4xlsO54BtxdvS1OBPoW8Np/xpO+V5t/QHvID4D4r+HPQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="barButtonItem43.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAedEVYdFRpdGxlAERhdGFiYXI7VmlldztGb3JtYXR0
+        aW5nO+m8qMEAAAVHSURBVFhHvZb5V1NHFMc9Uhfcuvxx3X9obSt1AUGwbIGwLwVCAKmynooWKgpYqy2L
+        LQkIKGrpf6GsCYvZyfR+78y8NyHLOfpDc87n3DvzXub7vfdN5uUQfQ4Pjb+cvX1/RWTiFpg4wLhi4h8x
+        BMbTc3NM85IZHF32kHYWDGQN3n0h/u9Pz/BTQdpHYOC9gVFpIBLZF+FITKFzRJOYCCVcl+MQjUNhNaaY
+        iXg8Lq7fXoKBo2yg785zEScDWDR/qS0jUkwKhWkxYC4eTBGD4agaI0bFPhn4yTTQO7JMrgQvDBHnv/1E
+        H1NpcHmpNUEogZAUYbGQGvOciphT12Cge2gRBo7BwJGe4WfSAN0AEUt0xaZipVfkLbYokZgIaGFAAgFa
+        GHMBJRjQc1YueQMD+3HRdXPBNnDjl6dsAF+ECMQO4iBy6Rp3gO6TwgqIquqSBYmgjAFEAgY6fp63DeB5
+        wADc5y7+mJJLTyRWi1XlFrQwKpZiERkt9Dgi9gIRESMD7sE5GDgOA0e7by3yztSuZWVyYXMsW6qqDEJM
+        51IIOeIehJQoBPeMuV1tYMBrG7g2tMAbgxdRC+mKbGF5TVaSKAj2AkqEBCBi51E5ViCPxuLC1eeBgWwY
+        ONZJz8PdPyfaB4h+ryIxd/V5hYtyjoxHuHq9oo1iW69Bj8LIW3tmJTeAR7Qg0nXLQMfgPG8M2a5IQqVm
+        +/Sz5Gq5IjtHZWDnDUUCMR3R2D6Z+Ns24KbK8Vz0IrKdpoiMZjv1vYyx+HaKfHtP5ppIdF80X/8LBk7A
+        wHG0VhvImatP4hzw1iXxXRK1UgSCCr8RNWEy0NT92DaA5xWjjQG3WPjq8y6mKIlOi0KTZcm3nhrh31VC
+        RvRxHrbmcOQ3XpuBgZMwkI0Ngp0Jp6ginUDhcofFlRR846kWPhJiwV0ZfUlRGqjvnLYNNHbP8HPBRVSR
+        TuDKspspMHlm8/VsFa0RYrZ2CIgick5shznHIVbVPgkDp9hAfdc0u/LthLmKsyazNhBIx1eM0xZUopsq
+        R9zchokQnyvOtj8sAyfqqB3SALmnG9AuP1eCiNbJHKAqLMxCqMoU0NAamztBiuBATuCnXNHKBk6zgRr3
+        JP+h2KIOYDFuIQQx5qiELEFaTAmhIl5czW2wkA3GFn4gDThaH1kGTlaTAWwKdKK+c4ajzGWs6wBTFrVG
+        ZNwG7VMCBYFaes41GtekqFZ5NeXlzb/bBpyuP3ljbJK7hJZxVFVRvsEVyrEkJNatPEh5QKxTlRY0t4Z5
+        f0Cs0XjNR7kvROdNVJQ3sYEzMHCqkjYENgbagzbp9m5A1BCQIiqyAAmqOYhoYRYzRGVOICdw4JU2PrAN
+        OFoe8ZsNBr587FCUM1/MpOfzmbKMfKaZLrVYJQM48Eoa2MD7MHC6vOUhb4x1uoiFL9AfEHB+sTkj32sW
+        mlKSc4BPp0vIQICP6+L6+4aB5of88kF74PxdBXIWGtNyjviEDLzekgau1rGBD5IMoE3vKsA80TQk8fFU
+        cWoDZU0P+H2P54M2pQLumSlNcRIQyMwPbMBH75yi2gnLwBlsCPw0YMAmIFbp5tUtyhFpjC9zVNcwfk3X
+        ZTQJilcqf7VJGNeQ44VVVDNud6C44TexQz8N/UeCoTG/2w38HOl4JrZpEcCvWbwBAU5NnZtzjH3C4kS9
+        Um0byM5zDHsLayZEIbmSjNENY6KAbiqovicKqgjnPZHvvCsug0qiYlTkVY6KXIrgkuOOpPxXcbEMjIiL
+        lF+gyJSOiPOgZJg5m98/T9r8Oj4MEwQOBfwsAJy9DR++BR8R+A6JH8r6Dwt5TFArpRdIAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
   <data name="ribbonGalleryBarItem1.Glyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAA90RVh0VGl0
