OBF yukleniyor mesaj paneli yüklendi

--- a/IhalematikPro/Forms/OBF/frm_TopluOBFekle.resx
+++ b/IhalematikPro/Forms/OBF/frm_TopluOBFekle.resx
@@ -971,4 +971,7 @@
         f/G6PN1P/n0tP/Apv/jdFFAHKeN2uW+w/aoYo/8AWbfLlL5+71yoxRRRQB//2Q==
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
